ops/k8s/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: beike-web
  namespace: beike-admin
  labels:
    app: beike-web
spec:
  type: ClusterIP
  selector:
    app: beike-web
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: metrics
      port: 9113
      targetPort: 9113
