ops/k8s/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beike-web
  namespace: beike-admin
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - admin.beike.com
      secretName: beike-tls
  rules:
    - host: admin.beike.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beike-web
                port:
                  number: 80
